--- a/index.html
+++ b/index.html
@@ -172,19 +172,14 @@
             <p class="text-lg text-gray-600 mt-4">
                 Простой и удобный способ оплаты.
             </p>
-        </div>
-    </section>
-<div class="flex justify-center">
-  <form class="payform-tbank bg-white rounded-lg shadow-md p-6" method="POST" action="https://securepay.tinkoff.ru/v2/Init">
-    <input class="payform-tbank-row" type="hidden" name="terminalkey" value="1752919288756DEMO">
+<div class="max-w-md mx-auto bg-white shadow-md rounded-lg p-6">
+  <h3 class="text-lg font-bold mb-4 text-center">Заполните форму для участия</h3>
 
-    <input class="payform-tbank-row w-full mb-4" type="text" name="email" placeholder="Ваш e-mail" required>
-    <input class="payform-tbank-row w-full mb-4" type="text" name="phone" placeholder="Телефон" required>
-
+  <form class="payform-tbank" method="POST" action="https://securepay.tinkoff.ru/v2/Init">
+    <input type="hidden" name="terminalkey" value="1752919288756DEMO">
     <input type="hidden" name="amount" value="49000">
     <input type="hidden" name="frame" value="true">
     <input type="hidden" name="language" value="ru">
-
     <input type="hidden" name="receipt" value='{
       "Email":"", 
       "Phone":"", 
@@ -202,11 +197,22 @@
       ]
     }'>
 
-    <button type="submit" class="bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-2 px-4 rounded w-full">
-      Оплатить и участвовать
+    <div class="mb-4">
+      <label class="block mb-1 font-medium">Ваш e-mail</label>
+      <input class="w-full px-3 py-2 border border-gray-300 rounded" type="text" name="email" required>
+    </div>
+
+    <div class="mb-4">
+      <label class="block mb-1 font-medium">Телефон</label>
+      <input class="w-full px-3 py-2 border border-gray-300 rounded" type="text" name="phone" required>
+    </div>
+
+    <button type="submit" class="w-full bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-2 px-4 rounded">
+      Оплатить 490 ₽
     </button>
   </form>
 </div>
+
 
 
 
