--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <!-- Tinkoff PayForm HTML structure -->
             <form class="payform-tbank" name="payform-tbank" id="payform-tbank">
                 <!-- ВНИМАНИЕ: Здесь вставлен ваш тестовый TerminalKey от Тинькофф -->
-                <input class="payform-tbank-row" type="hidden" name="terminalkey" value="1752919288756DEMO">
+                <input class="payform-tbank-row" type="hidden" name="terminalkey" value="1752919288817">
                 <input class="payform-tbank-row" type="hidden" name="frame" value="false">
                 <input class="payform-tbank-row" type="hidden" name="language" value="ru">
                 <input class="payform-tbank-row" type="hidden" name="receipt" id="receiptField" value="">
